--- a/social.html
+++ b/social.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no">
+  <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no,viewport-fit=cover">
   <link rel="manifest" href="manifest.webmanifest">
   <link rel="icon" type="image/png" sizes="512x512" href="assets/icon-word5.png">
   <link rel="shortcut icon" type="image/png" sizes="512x512" href="assets/icon-word5.png">
@@ -131,13 +131,18 @@
     }
     body {
       margin: 0;
-      min-height: 100svh;
+      height: 100dvh;
+      height: 100vh;
       display: flex;
       flex-direction: column;
       align-items: center;
       background: var(--bg);
       color: #ffffff;
       font-family: 'Clear Sans', 'Helvetica Neue', Arial, sans-serif;
+      padding-bottom: env(safe-area-inset-bottom, 0);
+    }
+    @supports (height: 100dvh) {
+      body { height: 100dvh; }
     }
     .header {
       width: 100%;
